# backend-garden-homesuit

./: .gitignore  check_db_duplicates.py  cleanup_indexes.py  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
garden-project/: docker-compose.yml
mqtt_test_client/: main.py  pyproject.toml
rest_api/: .coverage  manage.py  pyproject.toml  pytest.ini
rest_api/core/: admin.py  fields.py  redis_utils.py  urls.py
rest_api/core/management/commands/: create_superadmin.py  seed_db.py
rest_api/core/middleware/: rbac.py
rest_api/core/migrations/: 0001_initial.py  0002_permission_role_alter_machine_serial_userrole_and_more.py  0003_permission_channels.py  0004_permission_machines_business.py  0005_notification.py  0006_alter_machine_serial.py
rest_api/core/models/: __init__.py  alert.py  alert_history.py  alert_state.py  business.py  channel.py  configuration_channel.py  data.py  data_manager.py  garden.py  machine.py  machine_candidate.py  notification.py  permission.py  role.py  user_business.py  user_role.py
rest_api/core/serializers/: __init__.py
rest_api/core/serializers/Alert/: history.py  serializers.py
rest_api/core/serializers/Business/: serializers.py
rest_api/core/serializers/Channel/: serializers.py
rest_api/core/serializers/ConfigurationChannel/: serializers.py
rest_api/core/serializers/Data/: query.py  serializers.py
rest_api/core/serializers/Garden/: serializers.py
rest_api/core/serializers/Machine/: register.py  serializers.py  update.py
rest_api/core/serializers/MachineCandidate/: serializers.py
rest_api/core/serializers/Notification/: serializers.py
rest_api/core/serializers/Permission/: serializers.py
rest_api/core/serializers/Role/: serializers.py
rest_api/core/serializers/User/: __init__.py  serializers.py
rest_api/core/serializers/UserBusiness/: __init__.py  serializers.py
rest_api/core/serializers/UserRole/: serializers.py
rest_api/core/serializers/auth/: token.py
rest_api/core/services/: green_api.py
rest_api/core/tasks/: __init__.py  alerts.py
rest_api/core/tests/: conftest.py  test_alert_tasks.py  test_alert_viewset.py  test_business_filtering.py  test_business_viewset.py  test_candidate_viewset.py  test_channel_viewset.py  test_config_channel_viewset.py  test_data_latest.py  test_data_query.py  test_data_viewset.py  test_machine_registration.py  test_machine_update.py  test_machine_viewset.py  test_notification_viewset.py  test_rbac_viewsets.py  test_user_business_viewset.py
rest_api/core/validators/data/: insert.py
rest_api/core/views/: mixins.py
rest_api/core/views/Alert/: history.py  views.py
rest_api/core/views/Business/: views.py
rest_api/core/views/Channel/: views.py
rest_api/core/views/ConfigurationChannel/: views.py
rest_api/core/views/Data/: views.py
rest_api/core/views/Garden/: views.py
rest_api/core/views/Machine/: views.py
rest_api/core/views/MachineCandidate/: views.py
rest_api/core/views/Notification/: views.py
rest_api/core/views/Permission/: views.py
rest_api/core/views/Role/: views.py
rest_api/core/views/User/: __init__.py  views.py
rest_api/core/views/UserBusiness/: __init__.py  views.py
rest_api/core/views/UserRole/: views.py
rest_api/core/views/auth/: token.py
rest_api/docs/: alerts_api.md  api_endpoints.md  user_business_api.md  user_management_api.md
rest_api/garden_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
rest_api/mqtt/: __init__.py  apps.py  connection.py  data.py  subscriptions.py  utils.py
rest_api/mqtt/machine/data/: insert.py
rest_api/mqtt/validations/: __init__.py  data_schema.py
rest_api/test_api/: auth.py  machines.py
socket_server/: client_example.py  pyproject.toml
test_api/: channels.py  data.py  verify_buckets.py
(+10 files in other folders)
