[project]
name = "garden-rest-api"
version = "0.1.0"
description = "Rest API for garden project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==4.1.13",
    "djongo==1.3.6",
    "redis==7.1.0",
    "cerberus==1.3.8",
    "pymongo==3.12.1",
    "pytz",
    "sqlparse==0.2.4",
    "paho-mqtt==1.6.1",
    "django-mqtt",
    "watchdog",
]

[tool.uv]
managed = true
