[project]
name = "garden-rest-api"
version = "0.1.0"
description = "Rest API for garden project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==4.1.13",
    "djongo==1.3.6",
    "redis==7.1.0",
    "cerberus==1.3.8",
    "pymongo==3.13.0",
    "pytz",
    "sqlparse==0.2.4",
    "paho-mqtt==1.6.1",
    "django-mqtt",
    "watchdog",
    "dnspython",
    "certifi",
]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
# Target version for Python
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# Select rules to enable
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
